--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,9 @@
 body {
     font-family: 'IBM Plex Sans Thai Looped', sans-serif;
     font-weight: 400;
+    background-color: #F5F5F5;
 }
+
 
 h1 {
     text-align: center;
@@ -16,9 +18,16 @@ button {
     margin-bottom: 10%;
 }
 
-div {
+/* div {
     display: flex;
     flex-direction: column;
-}
+} */
 
+
+
+li {
+    float: left;
+    width: 100px;
+    clear: both;
+}
 
