--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,29 +1,24 @@
+
 body {
-    font-family: 'IBM Plex Sans Thai Looped', sans-serif;
-    font-weight: 400;
+    /* font-family: 'Quando', serif; */
+    /* theme 1 */
+    /* background-color: #115740; */
+    /* color:#f5f5f5; */
+    /* theme 2 */
     background-color: #F5F5F5;
 }
 
-
-h1 {
+h2 {
+    font-family: 'Merriweather', serif;
     text-align: center;
+    margin-top: 10px;
 }
 
 section {
+    font-family: 'Merriweather', serif;
     display: flex;
     justify-content: space-evenly;
 }
-
-button {
-    margin-bottom: 10%;
-}
-
-/* div {
-    display: flex;
-    flex-direction: column;
-} */
-
-
 
 li {
     float: left;
