--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
 @import "styles/style.css";
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;500&family=Merriweather:ital,wght@1,300;1,400;1,700;1,900&display=swap');
-@import url("https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css");
+// @import url("https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css");
+// @import url("https://kit.fontawesome.com/f73350b7d2.js");
