--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,23 +1,34 @@
 
 body {
-    /* font-family: 'Quando', serif; */
-    /* theme 1 */
-    /* background-color: #115740; */
-    /* color:#f5f5f5; */
-    /* theme 2 */
     background-color: #F5F5F5;
 }
 
-h2 {
+.game-screen {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+h2, h4, p {
     font-family: 'Merriweather', serif;
     text-align: center;
     margin-top: 10px;
+}
+
+p {
+    font-size: 14px;
 }
 
 section {
     font-family: 'Merriweather', serif;
     display: flex;
     justify-content: space-evenly;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+ul {
+    display: none;
 }
 
 li {
@@ -33,4 +44,34 @@ li {
 
 a {
     margin: 20px;
+}
+
+#instruction:hover ul {
+    display: block;
+}
+
+.modal-title {
+    display: none;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: #F5F5F5;
+}
+
+.modal-instructions {
+    display: none;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: #F5F5F5;
+}
+
+.active {
+    display: flex
 }
