--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,7 +19,7 @@ p {
     font-size: 14px;
 }
 
-section {
+section.game {
     font-family: 'Merriweather', serif;
     display: flex;
     justify-content: space-evenly;
@@ -40,10 +40,12 @@ li {
 .info {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 a {
-    margin: 20px;
+    margin: 10px;
+    text-decoration: none;
 }
 
 #instruction:hover ul {
@@ -70,8 +72,62 @@ a {
     height: 100%;
     z-index: 1;
     background-color: #F5F5F5;
+    /* opacity: 0.9; */
 }
 
 .active {
-    display: flex
+    display: flex;
+    /* transition: 1s; */
+}
+
+button {
+    border: none;
+    text-decoration: none;
+    transition: none;
+    margin: 10px;
+}
+
+#github-link {
+    width: 50px;
+    height: 50px;
+}
+
+.fa-github {
+    color: #6C935C;
+    font-size: 50px;
+    border-radius: 50%;
+
+    transition: 0.7s;
+}
+
+#linkedin-link, button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #6C935C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: 0.7s;
+}
+
+.fa-linkedin-in {
+    font-size: 32px;
+    text-align: center;
+    /* text-decoration: none; */
+}
+
+.fa-volume-up, .fa-volume-mute, .fa-rotate-left, .fa-linkedin-in {
+    color: #f5f5f5;
+}
+
+#linkedin-link:hover, button:hover {
+    background-color: #115740;
+    transition: 0.7s;
+}
+
+.fa-github:hover {
+    color: #115740;
+    transition: 0.7s;
 }
