add info modal that pauses game

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -75,6 +75,28 @@ a {
     /* opacity: 0.9; */
 }
 
+.modal-info {
+    display: none;
+    position: fixed;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: #F5F5F5;
+    /* opacity: 0.5; */
+}
+
+.modal-info > .modal-content {
+    background-color: #115740;
+    color: #f5f5f5;
+
+    z-index: 1;
+    /* opacity: 1.0; */
+    border: 4px #6C935C solid;
+    height: 100%;
+    padding: 12em 250px 0 250px;
+}
 .active {
     display: flex;
     /* transition: 1s; */
@@ -85,6 +107,7 @@ button {
     text-decoration: none;
     transition: none;
     margin: 10px;
+    cursor: pointer;
 }
 
 #github-link {
@@ -100,7 +123,7 @@ button {
     transition: 0.7s;
 }
 
-#linkedin-link, button {
+#linkedin-link, #angellist-link, button {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -112,17 +135,17 @@ button {
     transition: 0.7s;
 }
 
-.fa-linkedin-in {
+.fa-linkedin-in, .fa-angellist {
     font-size: 32px;
     text-align: center;
     /* text-decoration: none; */
 }
 
-.fa-volume-up, .fa-volume-mute, .fa-rotate-left, .fa-linkedin-in {
+.fa-volume-up, .fa-volume-mute, .fa-rotate-left, .fa-linkedin-in, .fa-info, .fa-angellist {
     color: #f5f5f5;
 }
 
-#linkedin-link:hover, button:hover {
+#linkedin-link:hover, #angellist-link:hover, button:hover {
     background-color: #115740;
     transition: 0.7s;
 }
